Adding vm options to test runs