@@ -45,6 +45,14 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <argLine>-Xmx13m -XX:MaxPermSize=13m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
 
     </build>
